Add DC motor model
This adds a mathematically correct DC motor model with tests that can be used for instruments and control systems design and implementation (for example MRAC).

Closes #14 

Signed-off-by: Martin Schröder <info@swedishembedded.com>

--- a/doc/index.adoc
+++ b/doc/index.adoc
@@ -2,4 +2,6 @@
 :stem: latexmath
 :math:
 
+${include("model/index.adoc", leveloffset="+1")}
+
 ${include("motion_profile/index.adoc", leveloffset="+1")}
