Add documentation for dynamics functions
- Cleaned up, documented and refactored dynamics functions
- More refactoring done as well because so much work needed to be done
- Added tests for all functions except theta2ss and mrac.

Signed-off-by: Martin Schröder <info@swedishembedded.com>

--- a/doc/linalg/index.adoc
+++ b/doc/linalg/index.adoc
@@ -21,6 +21,8 @@ ${include("dlyap.adoc", leveloffset="+0")}
 
 ${include("eig.adoc", leveloffset="+0")}
 
+${include("eig_sym.adoc", leveloffset="+0")}
+
 ${include("expm.adoc", leveloffset="+0")}
 
 ${include("hankel.adoc", leveloffset="+0")}
@@ -34,6 +36,8 @@ ${include("linsolve_gauss.adoc", leveloffset="+0")}
 ${include("linsolve_lower_triangular.adoc", leveloffset="+0")}
 
 ${include("linsolve_lup.adoc", leveloffset="+0")}
+
+${include("linsolve_qr.adoc", leveloffset="+0")}
 
 ${include("linsolve_upper_triangular.adoc", leveloffset="+0")}
 
