Add test assertions to era sysid
- Removed okid function for now. It was only computing markov parameters anyway.
- Renamed era to okid_era. It still doesn't compute kalman gain though and the algorithm does need to be reviewed.
- Added assertion to other sysid tests.

Closes #25

Signed-off-by: Martin Schröder <info@swedishembedded.com>

--- a/doc/linalg/index.adoc
+++ b/doc/linalg/index.adoc
@@ -37,6 +37,8 @@ ${include("inv.adoc", leveloffset="+0")}
 
 ${include("linsolve_chol.adoc", leveloffset="+0")}
 
+${include("linsolve_markov.adoc", leveloffset="+0")}
+
 ${include("linsolve_gauss.adoc", leveloffset="+0")}
 
 ${include("linsolve_lower_triangular.adoc", leveloffset="+0")}
