--- a/doc/linalg/linsolve_markov.adoc
+++ b/doc/linalg/linsolve_markov.adoc
@@ -4,4 +4,4 @@
 // Simulation: https://swedishembedded.com/simulation
 // Training: https://swedishembedded.com/tag/training
 
-${insert("okid")}
+${insert("linsolve_markov")}
