motor: add clarke and park transforms
Closes #28

Signed-off-by: Martin Schröder <info@swedishembedded.com>

--- a/doc/index.adoc
+++ b/doc/index.adoc
@@ -53,6 +53,8 @@ ${include("misc/index.adoc", leveloffset="+1")}
 
 ${include("model/index.adoc", leveloffset="+1")}
 
+${include("motor/index.adoc", leveloffset="+1")}
+
 ${include("motion/index.adoc", leveloffset="+1")}
 
 ${include("optimization/index.adoc", leveloffset="+1")}
